JumpScript/tests/baselines/reference/for-of6.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of6.jump(1,6): error TS2304: Cannot find name 'v'.


==== tests/cases/conformance/es6/for-ofStatements/for-of6.jump (1 errors) ====
    for (v of [0]) {
         ~
!!! error TS2304: Cannot find name 'v'.
        let v;
    }